opengl/glu.h

/* Internal convenience typedefs */
typedef void (CALLBACK* _GLfuncptr)();
/* TessError */
#define GLU_TESS_ERROR1                    100151
#define GLU_TESS_ERROR2                    100152
#define GLU_TESS_ERROR3                    100153
#define GLU_TESS_ERROR4                    100154
#define GLU_TESS_ERROR5                    100155
#define GLU_TESS_ERROR6                    100156
#define GLU_TESS_ERROR7                    100157
#define GLU_TESS_ERROR8                    100158
#define GLU_TESS_MISSING_BEGIN_POLYGON     GLU_TESS_ERROR1
#define GLU_TESS_MISSING_BEGIN_CONTOUR     GLU_TESS_ERROR2
#define GLU_TESS_MISSING_END_POLYGON       GLU_TESS_ERROR3
#define GLU_TESS_MISSING_END_CONTOUR       GLU_TESS_ERROR4
#define GLU_TESS_COORD_TOO_LARGE           GLU_TESS_ERROR5
#define GLU_TESS_NEED_COMBINE_CALLBACK     GLU_TESS_ERROR6
/* TessWinding */
#define GLU_TESS_WINDING_ODD               100130
#define GLU_TESS_WINDING_NONZERO           100131
#define GLU_TESS_WINDING_POSITIVE          100132
#define GLU_TESS_WINDING_NEGATIVE          100133
#define GLU_TESS_WINDING_ABS_GEQ_TWO       100134
class GLUnurbs;
class GLUquadric;
class GLUtesselator;
typedef class GLUnurbs GLUnurbsObj;
typedef class GLUquadric GLUquadricObj;
typedef class GLUtesselator GLUtesselatorObj;
typedef class GLUtesselator GLUtriangulatorObj;
typedef struct GLUnurbs GLUnurbs;
typedef struct GLUquadric GLUquadric;
typedef struct GLUtesselator GLUtesselator;
typedef struct GLUnurbs GLUnurbsObj;
typedef struct GLUquadric GLUquadricObj;
typedef struct GLUtesselator GLUtesselatorObj;
typedef struct GLUtesselator GLUtriangulatorObj;
#define GLU_TESS_MAX_COORD 1.0e150
extern void APIENTRY gluBeginCurve (GLUnurbs* nurb);
extern void APIENTRY gluBeginPolygon (GLUtesselator* tess);
extern void APIENTRY gluBeginSurface (GLUnurbs* nurb);
extern void APIENTRY gluBeginTrim (GLUnurbs* nurb);
extern GLint gluBuild1DMipmapLevels (GLenum target, GLint internalFormat, GLsizei width, GLenum format, GLenum type, GLint level, GLint base, GLint max, const void *data);
extern GLint APIENTRY gluBuild1DMipmaps (GLenum target, GLint internalFormat, GLsizei width, GLenum format, GLenum type, const void *data);
extern GLint gluBuild2DMipmapLevels (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLenum format, GLenum type, GLint level, GLint base, GLint max, const void *data);
extern GLint APIENTRY gluBuild2DMipmaps (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLenum format, GLenum type, const void *data);
extern GLint APIENTRY gluBuild3DMipmapLevels (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type, GLint level, GLint base, GLint max, const void *data);
extern GLint APIENTRY gluBuild3DMipmaps (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type, const void *data);
extern GLboolean gluCheckExtension (const GLubyte *extName, const GLubyte *extString);
extern void APIENTRY gluCylinder (GLUquadric* quad, GLdouble base, GLdouble top, GLdouble height, GLint slices, GLint stacks);
extern void APIENTRY gluDeleteNurbsRenderer (GLUnurbs* nurb);
extern void APIENTRY gluDeleteQuadric (GLUquadric* quad);
extern void APIENTRY gluDeleteTess (GLUtesselator* tess);
extern void APIENTRY gluDisk (GLUquadric* quad, GLdouble inner, GLdouble outer, GLint slices, GLint loops);
extern void APIENTRY gluEndCurve (GLUnurbs* nurb);
extern void APIENTRY gluEndPolygon (GLUtesselator* tess);
extern void APIENTRY gluEndSurface (GLUnurbs* nurb);
extern void APIENTRY gluEndTrim (GLUnurbs* nurb);
extern const GLubyte * APIENTRY gluErrorString (GLenum error);
const wchar_t* APIENTRY gluErrorUnicodeStringEXT (GLenum   errCode);
extern void APIENTRY gluGetNurbsProperty (GLUnurbs* nurb, GLenum property, GLfloat* data);
extern const GLubyte * APIENTRY gluGetString (GLenum name);
extern void APIENTRY gluGetTessProperty (GLUtesselator* tess, GLenum which, GLdouble* data);
extern void APIENTRY gluLoadSamplingMatrices (GLUnurbs* nurb, const GLfloat *model, const GLfloat *perspective, const GLint *view);
extern void APIENTRY gluLookAt (GLdouble eyeX, GLdouble eyeY, GLdouble eyeZ, GLdouble centerX, GLdouble centerY, GLdouble centerZ, GLdouble upX, GLdouble upY, GLdouble upZ);
extern GLUnurbs* APIENTRY gluNewNurbsRenderer (void);
extern GLUquadric* APIENTRY gluNewQuadric (void);
extern GLUtesselator* APIENTRY gluNewTess (void);
extern void APIENTRY gluNextContour (GLUtesselator* tess, GLenum type);
extern void APIENTRY gluNurbsCallback (GLUnurbs* nurb, GLenum which, _GLfuncptr fn);
extern void gluNurbsCallbackData (GLUnurbs* nurb, GLvoid* userData);
extern void gluNurbsCallbackDataEXT (GLUnurbs* nurb, GLvoid* userData);
extern void APIENTRY gluNurbsCurve (GLUnurbs* nurb, GLint knotCount, GLfloat *knots, GLint stride, GLfloat *control, GLint order, GLenum type);
extern void APIENTRY gluNurbsProperty (GLUnurbs* nurb, GLenum property, GLfloat value);
extern void APIENTRY gluNurbsSurface (GLUnurbs* nurb, GLint sKnotCount, GLfloat* sKnots, GLint tKnotCount, GLfloat* tKnots, GLint sStride, GLint tStride, GLfloat* control, GLint sOrder, GLint tOrder, GLenum type);
extern void APIENTRY gluOrtho2D (GLdouble left, GLdouble right, GLdouble bottom, GLdouble top);
extern void APIENTRY gluPartialDisk (GLUquadric* quad, GLdouble inner, GLdouble outer, GLint slices, GLint loops, GLdouble start, GLdouble sweep);
extern void APIENTRY gluPerspective (GLdouble fovy, GLdouble aspect, GLdouble zNear, GLdouble zFar);
extern void APIENTRY gluPickMatrix (GLdouble x, GLdouble y, GLdouble delX, GLdouble delY, GLint *viewport);
extern GLint APIENTRY gluProject (GLdouble objX, GLdouble objY, GLdouble objZ, const GLdouble *model, const GLdouble *proj, const GLint *view, GLdouble* winX, GLdouble* winY, GLdouble* winZ);
extern void APIENTRY gluPwlCurve (GLUnurbs* nurb, GLint count, GLfloat* data, GLint stride, GLenum type);
extern void APIENTRY gluQuadricCallback (GLUquadric* quad, GLenum which, _GLfuncptr fn);
extern void APIENTRY gluQuadricDrawStyle (GLUquadric* quad, GLenum draw);
extern void APIENTRY gluQuadricNormals (GLUquadric* quad, GLenum normal);
extern void APIENTRY gluQuadricOrientation (GLUquadric* quad, GLenum orientation);
extern void APIENTRY gluQuadricTexture (GLUquadric* quad, GLboolean texture);
extern GLint APIENTRY gluScaleImage (GLenum format, GLsizei wIn, GLsizei hIn, GLenum typeIn, const void *dataIn, GLsizei wOut, GLsizei hOut, GLenum typeOut, GLvoid* dataOut);
extern void APIENTRY gluSphere (GLUquadric* quad, GLdouble radius, GLint slices, GLint stacks);
extern void APIENTRY gluTessBeginContour (GLUtesselator* tess);
extern void APIENTRY gluTessBeginPolygon (GLUtesselator* tess, GLvoid* data);
extern void APIENTRY gluTessCallback (GLUtesselator* tess, GLenum which, _GLfuncptr fn);
extern void APIENTRY gluTessEndContour (GLUtesselator* tess);
extern void APIENTRY gluTessEndPolygon (GLUtesselator* tess);
extern void APIENTRY gluTessNormal (GLUtesselator* tess, GLdouble valueX, GLdouble valueY, GLdouble valueZ);
extern void APIENTRY gluTessProperty (GLUtesselator* tess, GLenum which, GLdouble data);
extern void APIENTRY gluTessVertex (GLUtesselator* tess, GLdouble *location, GLvoid* data);
extern GLint APIENTRY gluUnProject (GLdouble winX, GLdouble winY, GLdouble winZ, const GLdouble *model, const GLdouble *proj, const GLint *view, GLdouble* objX, GLdouble* objY, GLdouble* objZ);
extern GLint APIENTRY gluUnProject4 (GLdouble winX, GLdouble winY, GLdouble winZ, GLdouble clipW, const GLdouble *model, const GLdouble *proj, const GLint *view, GLdouble near, GLdouble far, GLdouble* objX, GLdouble* objY, GLdouble* objZ, GLdouble* objW);