opengl/glu.d


/* TessError */
const uint GLU_TESS_ERROR1                      = 100151;
const uint GLU_TESS_ERROR2                      = 100152;
const uint GLU_TESS_ERROR3                      = 100153;
const uint GLU_TESS_ERROR4                      = 100154;
const uint GLU_TESS_ERROR5                      = 100155;
const uint GLU_TESS_ERROR6                      = 100156;
const uint GLU_TESS_ERROR7                      = 100157;
const uint GLU_TESS_ERROR8                      = 100158;
const uint GLU_TESS_MISSING_BEGIN_POLYGON       = 100151;
const uint GLU_TESS_MISSING_BEGIN_CONTOUR       = 100152;
const uint GLU_TESS_MISSING_END_POLYGON         = 100153;
const uint GLU_TESS_MISSING_END_CONTOUR         = 100154;
const uint GLU_TESS_COORD_TOO_LARGE             = 100155;
const uint GLU_TESS_NEED_COMBINE_CALLBACK       = 100156;

/* TessWinding */
const uint GLU_TESS_WINDING_ODD                 = 100130;
const uint GLU_TESS_WINDING_NONZERO             = 100131;
const uint GLU_TESS_WINDING_POSITIVE            = 100132;
const uint GLU_TESS_WINDING_NEGATIVE            = 100133;
const uint GLU_TESS_WINDING_ABS_GEQ_TWO         = 100134;

/*************************************************************/

extern (C) struct GLUnurbs;
extern (C) struct GLUquadric;
extern (C) struct GLUtesselator;

extern (C) struct GLUnurbsObj;
extern (C) struct GLUquadricObj;
extern (C) struct GLUtesselatorObj;
extern (C) struct GLUtriangulatorObj;

const GLdouble GLU_TESS_MAX_COORD = 1.0e150;

version (Windows) 
  extern (Windows):
else
  extern (C) :

version (GL_GLU_PROTOTYPES) {
void gluBeginCurve (GLUnurbs* nurb);
void gluBeginPolygon (GLUtesselator* tess);
void gluBeginSurface (GLUnurbs* nurb);
void gluBeginTrim (GLUnurbs* nurb);
version (NotWindows) {
GLint gluBuild1DMipmapLevels (GLenum target, GLint internalFormat, GLsizei width, GLenum format, GLenum type, GLint level, GLint base, GLint max, void *data);
}
GLint gluBuild1DMipmaps (GLenum target, GLint internalFormat, GLsizei width, GLenum format, GLenum type, void *data);
version (NotWindows) {
GLint gluBuild2DMipmapLevels (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLenum format, GLenum type, GLint level, GLint base, GLint max, void *data);
}
GLint gluBuild2DMipmaps (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLenum format, GLenum type, void *data);
version (NotWindows) {
GLint gluBuild3DMipmapLevels (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type, GLint level, GLint base, GLint max, void *data);
GLint gluBuild3DMipmaps (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type, void *data);
}
GLboolean gluCheckExtension (GLubyte *extName, GLubyte *extString);
void gluCylinder (GLUquadric* quad, GLdouble base, GLdouble top, GLdouble height, GLint slices, GLint stacks);
void gluDeleteNurbsRenderer (GLUnurbs* nurb);
void gluDeleteQuadric (GLUquadric* quad);
void gluDeleteTess (GLUtesselator* tess);
void gluDisk (GLUquadric* quad, GLdouble inner, GLdouble outer, GLint slices, GLint loops);
void gluEndCurve (GLUnurbs* nurb);
void gluEndPolygon (GLUtesselator* tess);
void gluEndSurface (GLUnurbs* nurb);
void gluEndTrim (GLUnurbs* nurb);
GLubyte * gluErrorString (GLenum error);
version (Windows) {
wchar* gluErrorUnicodeStringEXT (GLenum   errCode);
}
void gluGetNurbsProperty (GLUnurbs* nurb, GLenum property, GLfloat* data);
GLubyte * gluGetString (GLenum name);
void gluGetTessProperty (GLUtesselator* tess, GLenum which, GLdouble* data);
void gluLoadSamplingMatrices (GLUnurbs* nurb, GLfloat *model, GLfloat *perspective, GLint *view);
void gluLookAt (GLdouble eyeX, GLdouble eyeY, GLdouble eyeZ, GLdouble centerX, GLdouble centerY, GLdouble centerZ, GLdouble upX, GLdouble upY, GLdouble upZ);
GLUnurbs* gluNewNurbsRenderer ();
GLUquadric* gluNewQuadric ();
GLUtesselator* gluNewTess ();
void gluNextContour (GLUtesselator* tess, GLenum type);
void gluNurbsCallback (GLUnurbs* nurb, GLenum which, GLvoid (*CallBackFunc)());
version (NotWindows) {
void gluNurbsCallbackData (GLUnurbs* nurb, GLvoid* userData);
void gluNurbsCallbackDataEXT (GLUnurbs* nurb, GLvoid* userData);
}
void gluNurbsCurve (GLUnurbs* nurb, GLint knotCount, GLfloat *knots, GLint stride, GLfloat *control, GLint order, GLenum type);
void gluNurbsProperty (GLUnurbs* nurb, GLenum property, GLfloat value);
void gluNurbsSurface (GLUnurbs* nurb, GLint sKnotCount, GLfloat* sKnots, GLint tKnotCount, GLfloat* tKnots, GLint sStride, GLint tStride, GLfloat* control, GLint sOrder, GLint tOrder, GLenum type);
void gluOrtho2D (GLdouble left, GLdouble right, GLdouble bottom, GLdouble top);
void gluPartialDisk (GLUquadric* quad, GLdouble inner, GLdouble outer, GLint slices, GLint loops, GLdouble start, GLdouble sweep);
void gluPerspective (GLdouble fovy, GLdouble aspect, GLdouble zNear, GLdouble zFar);
void gluPickMatrix (GLdouble x, GLdouble y, GLdouble delX, GLdouble delY, GLint *viewport);
GLint gluProject (GLdouble objX, GLdouble objY, GLdouble objZ, GLdouble *model, GLdouble *proj, GLint *view, GLdouble* winX, GLdouble* winY, GLdouble* winZ);
void gluPwlCurve (GLUnurbs* nurb, GLint count, GLfloat* data, GLint stride, GLenum type);
void gluQuadricCallback (GLUquadric* quad, GLenum which, GLvoid (*CallBackFunc)());
void gluQuadricDrawStyle (GLUquadric* quad, GLenum draw);
void gluQuadricNormals (GLUquadric* quad, GLenum normal);
void gluQuadricOrientation (GLUquadric* quad, GLenum orientation);
void gluQuadricTexture (GLUquadric* quad, GLboolean texture);
GLint gluScaleImage (GLenum format, GLsizei wIn, GLsizei hIn, GLenum typeIn, void *dataIn, GLsizei wOut, GLsizei hOut, GLenum typeOut, GLvoid* dataOut);
void gluSphere (GLUquadric* quad, GLdouble radius, GLint slices, GLint stacks);
void gluTessBeginContour (GLUtesselator* tess);
void gluTessBeginPolygon (GLUtesselator* tess, GLvoid* data);
void gluTessCallback (GLUtesselator* tess, GLenum which, GLvoid (*CallBackFunc)());
void gluTessEndContour (GLUtesselator* tess);
void gluTessEndPolygon (GLUtesselator* tess);
void gluTessNormal (GLUtesselator* tess, GLdouble valueX, GLdouble valueY, GLdouble valueZ);
void gluTessProperty (GLUtesselator* tess, GLenum which, GLdouble data);
void gluTessVertex (GLUtesselator* tess, GLdouble *location, GLvoid* data);
GLint gluUnProject (GLdouble winX, GLdouble winY, GLdouble winZ, GLdouble *model, GLdouble *proj, GLint *view, GLdouble* objX, GLdouble* objY, GLdouble* objZ);
version (NotWindows) {
GLint gluUnProject4 (GLdouble winX, GLdouble winY, GLdouble winZ, GLdouble clipW, GLdouble *model, GLdouble *proj, GLint *view, GLdouble near, GLdouble far, GLdouble* objX, GLdouble* objY, GLdouble* objZ, GLdouble* objW);
}
} /* GL_GLU_PROTOTYPES */

alias void (*PFGLUBEGINCURVEPROC) (GLUnurbs* nurb);
alias void (*PFGLUBEGINPOLYGONPROC) (GLUtesselator* tess);
alias void (*PFGLUBEGINSURFACEPROC) (GLUnurbs* nurb);
alias void (*PFGLUBEGINTRIMPROC) (GLUnurbs* nurb);
version (NotWindows) {
alias GLint (*PFGLUBUILD1DMIPMAPSLEVELSPROC) (GLenum target, GLint internalFormat, GLsizei width, GLenum format, GLenum type, GLint level, GLint base, GLint max, void *data);
}
alias GLint (*PFGLUBUILD1DMIPMAPSPROC) (GLenum target, GLint internalFormat, GLsizei width, GLenum format, GLenum type, void *data);
version (NotWindows) {
alias GLint (*PFGLUBUILD2DMIPMAPLEVELSPROC) (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLenum format, GLenum type, GLint level, GLint base, GLint max, void *data);
}
alias GLint (*PFGLUBUILD2DMIPMAPSPROC) (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLenum format, GLenum type, void *data);
version (NotWindows) {
alias GLint (*PFGLUBUILD3DMIPMAPLEVELSPROC) (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type, GLint level, GLint base, GLint max, void *data);
alias GLint (*PFGLUBUILD3DMIPMAPSPROC) (GLenum target, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLenum format, GLenum type, void *data);
}
alias void (*PFGLUCYLINDERPROC) (GLUquadric* quad, GLdouble base, GLdouble top, GLdouble height, GLint slices, GLint stacks);
alias void (*PFGLUDELETENURBSRENDERERPROC) (GLUnurbs* nurb);
alias void (*PFGLUDELETEQUADRICPROC) (GLUquadric* quad);
alias void (*PFGLUDELETETESSPROC) (GLUtesselator* tess);
alias void (*PFGLUDISKPROC) (GLUquadric* quad, GLdouble inner, GLdouble outer, GLint slices, GLint loops);
alias void (*PFGLUENDCURVEPROC) (GLUnurbs* nurb);
alias void (*PFGLUENDPOLYGONPROC) (GLUtesselator* tess);
alias void (*PFGLUENDSURFACEPROC) (GLUnurbs* nurb);
alias void (*PFGLUENDTRIMPROC) (GLUnurbs* nurb);
alias GLubyte * (*PFGLUERRORSTRINGPROC) (GLenum error);
version (Windows) {
alias wchar* (*PFGLUERRORUNICODESTRINGEXTPROC) (GLenum   errCode);
}
alias void (*PFGLUGETNURBSPROPERTYPROC) (GLUnurbs* nurb, GLenum property, GLfloat* data);
alias GLubyte * (*PFGLUGETSTRINGPROC) (GLenum name);
alias void (*PFGLUGETTESSPROPERTYPROC) (GLUtesselator* tess, GLenum which, GLdouble* data);
alias void (*PFGLULOADSAMPLINGMATRICESPROC) (GLUnurbs* nurb, GLfloat *model, GLfloat *perspective, GLint *view);
alias void (*PFGLULOOKATPROC) (GLdouble eyeX, GLdouble eyeY, GLdouble eyeZ, GLdouble centerX, GLdouble centerY, GLdouble centerZ, GLdouble upX, GLdouble upY, GLdouble upZ);
alias GLUnurbs* (*PFGLUNEWNURBSRENDERERPROC) ();
alias GLUquadric* (*PFGLUNEWQUADRICPROC) ();
alias GLUtesselator* (*PFGLUNEWTESSPROC) ();
alias void (*PFGLUNEXTCONTOURPROC) (GLUtesselator* tess, GLenum type);
alias void (*PFGLUNURBSCALLBACKPROC) (GLUnurbs* nurb, GLenum which, void (*fn) ());
version (NotWindows) {
alias void (*PFGLUNURBSCALLBACKDATAPROC) (GLUnurbs* nurb, GLvoid* userData);
alias void (*PFGLUNURBSCALLBACKDATAEXTPROC) (GLUnurbs* nurb, GLvoid* userData);
}
